python veriable ,flow control and loops

--- a/python-learning/02.python.ipynb
+++ b/python-learning/02.python.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "3406c904",
    "metadata": {},
    "outputs": [
@@ -192,11 +192,137 @@
     "sms = \"Hello\"+str(10)\n",
     "print(sms)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1c41e3dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add :  23\n",
+      "sub :  13\n",
+      "multi :  90\n",
+      "floor_divistion :  3\n",
+      "divistion :  3.6\n",
+      "power/ expontion :  1889568\n",
+      "modulus :  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arithmetic opration / oprator\n",
+    "cr_am= 18;\n",
+    "dr_am=5;\n",
+    "\n",
+    "print(\"add : \",cr_am + dr_am)\n",
+    "print(\"sub : \",cr_am - dr_am)\n",
+    "print(\"multi : \",cr_am * dr_am)\n",
+    "print(\"floor_divistion : \",cr_am // dr_am)\n",
+    "print(\"divistion : \",cr_am / dr_am)\n",
+    "print(\"power/ expontion : \",cr_am ** dr_am)\n",
+    "print(\"modulus : \",cr_am % dr_am)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bf7d529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== with Str False\n",
+      "== with float True\n",
+      "== with number True\n",
+      "!= with Str True\n",
+      "!= with float False\n",
+      "!= with number False\n",
+      "< with Str False\n",
+      "<= with float True\n",
+      "< with number False\n",
+      "> with Str True\n",
+      "> with float False\n",
+      "> with number True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comperision opration\n",
+    "ename=\"prasun\"\n",
+    "eheight=\"5.50\"\n",
+    "esal=200000000\n",
+    "ename1=\"Raja\"\n",
+    "eheight1=\"5.50\"\n",
+    "esal1=200000000\n",
+    "\n",
+    "print(\"== with Str\",ename==ename1)\n",
+    "print(\"== with float\",eheight==eheight1)\n",
+    "print(\"== with number\",esal==esal1)\n",
+    "\n",
+    "\n",
+    "print(\"!= with Str\",ename!=ename1)\n",
+    "print(\"!= with float\",eheight!=eheight1)\n",
+    "print(\"!= with number\",esal!=esal1)\n",
+    "\n",
+    "print(\"< with Str\",ename<ename1)\n",
+    "print(\"<= with float\",eheight<=eheight1)\n",
+    "print(\"< with number\",esal<esal1)\n",
+    "\n",
+    "print(\"> with Str\",ename>ename1)\n",
+    "print(\"> with float\",eheight>eheight1)\n",
+    "print(\">= with number\",esal>=esal1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d57ab11a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OR True\n",
+      "AND False\n",
+      "NOT True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logical Oprators \n",
+    "\n",
+    "exeId = \"476564-gtrgtgbr-6jr78r88r-nrybrhhf7\"\n",
+    "dataCount= 0\n",
+    "\n",
+    "print(\"OR\",(exeId != \"\") or (dataCount >0))\n",
+    "print(\"AND\",(exeId != \"\") and (dataCount >0))\n",
+    "print(\"NOT\", not ((dataCount >0)))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2143bedf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
